# tap-suiteql

./: .env.sample  .gitignore  README.md  catalog-info.yaml  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_suiteql/: auth.py  client.py  query_builder.py  schema_builder.py  streams.py  tap.py
tap_suiteql/tests/: __init__.py  test_core.py  test_query_builder.py  test_schema_builder.py
