[tool.poetry]
name = "tap-suiteql"
version = "0.0.1"
description = "`tap-suiteql` is a Singer tap for suiteql, built with the Meltano SDK for Singer Taps."
authors = ["André Anastácio"]
keywords = [
    "ELT",
    "suiteql",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.5.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
pytest-dotenv = "^0.5.2"
types-oauthlib = "^3.1.6"
types-urllib3 = "^1.26.15"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_suiteql"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-suiteql = 'tap_suiteql.tap:Tapsuiteql.cli'
